# model-checking

./: .gitignore  CHANGELOG.md  README.md  build.sh  doc.sh  flake.nix  model-checking.cabal
css/: pandoc.css
doc/: ModelChecking.html  ModelChecking.md  ModelChecking1.html  ModelChecking1.md  ModelChecking2.html  ModelChecking2.md  ModelChecking3.html  ModelChecking3.md
src/: GraphViz.hs  ModelChecking.lhs  ModelChecking1.lhs  ModelChecking2.lhs  ModelChecking3.lhs  Scratch.hs
src/Old/: Junk.hs  ModelChecking2.lhs  ModelChecking3.lhs
