cabal-version:      2.4
name:               model-checking
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ben Selfridge
maintainer:         benselfridge@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ModelChecking1
                      ModelChecking2
                      -- ModelChecking3
                      -- GraphViz

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      containers,
                      fgl,
                      graphviz,
                      random
    hs-source-dirs:   src
    default-language: Haskell2010
